--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,10 +7,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
+
 }
 
 #modal-background {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
