--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -4,15 +4,18 @@
     align-items: center;
     background-color: rgb(241, 241, 241);
     height: 100vh;
+    padding-top: 1.5rem;
 }
 
 #login-box {
     display: flex;
     flex-direction: column;
-    width: 23rem;
+    width: 22rem;
     align-items: center;
     background-color: white;
-    padding: 2rem;
+    padding: 2.5rem;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 8px;
 }
 
 #login-form {
@@ -20,4 +23,100 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+}
+
+#login-page-wrapper h1 {
+    font-size: 24px;
+    font-weight: normal;
+}
+
+#login-form input {
+    width: 20.1rem;
+    height: 2.3rem;
+    margin-bottom: .7rem;
+    font-size: 12px;
+    color: rgb(0, 0, 0);
+    border-radius: 8px;
+    border: 2px solid rgb(189, 189, 189);
+    margin: 0 0 .7rem 0;;
+    padding: 0 1rem;
+}
+
+.login-submit {
+    display: flex;
+    align-self: flex-end;
+    background-color: #e60012;
+    width: 7rem;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 11px;
+    height: 2rem;
+    padding: 0;
+    border: none;
+    border-radius: 80px;
+    cursor: pointer;
+}
+
+.sign-in-with {
+    display: flex;
+    flex-direction: column;
+    margin: 1.2rem 0;
+    width: 18.7rem;
+    padding: 0 1.8rem 1.8rem 1.8rem;
+    background-color: rgb(241, 241, 241);
+    border-radius: 8px;
+    align-items: center;
+}
+
+.sign-in-with p {
+    font-size: 10px;
+    padding: 0.5rem 0rem;
+}
+
+#demo1 {
+    display: flex;
+    width: 100%;
+    height: 2.2rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    background-color: white;
+    border: 1px solid rgb(184, 184, 184);
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+#demo2 {
+    display: flex;
+    width: 100%;
+    height: 2.2rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 8px;
+    margin-top: .4rem;
+    cursor: pointer;
+}
+
+#signup-link {
+    font-size: 12px;
+    color: rgb(102, 102, 102);
+}
+
+#create-account {
+    display: flex;
+    margin-top: 1rem;
+    font-size: 12px;
+    height: 2rem;
+    background-color: white;
+    border: 1px solid rgb(184, 184, 184);
+    align-items: center;
+    justify-content: center;
+    border-radius: 80px;
+    padding: 1rem;
+    cursor: pointer;
 }
