--- a/react-app/src/components/ProductPage/ProductPage.css
+++ b/react-app/src/components/ProductPage/ProductPage.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+    position: relative;
 }
 
 
@@ -14,14 +15,6 @@
     border: 1px solid black;
     margin-top: 4rem;
     padding: 2rem 3rem 5rem 3rem;
-}
-
-.product-path {
-    display: flex;
-    background-image: url('https://media.discordapp.net/attachments/1128785113287753760/1131522101128466483/image.png');
-    background-repeat: repeat-x;
-    background-size: 40px;
-    z-index: 1;
 }
 
 .product-content {
@@ -65,4 +58,90 @@
     max-width: 30rem;
     max-height: 25rem;
     margin-bottom: 5rem;
+}
+
+.cart-dropdown {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 19rem;
+    height: 100vh;
+    background-color: rgb(241, 241, 241);
+    margin: 0px;
+    padding: 20px;
+}
+
+.cart-grey-back {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
+.right-modal-header > i {
+    font-size: 24px;
+    color: rgb(189, 189, 189);
+    cursor: pointer;
+}
+
+.cart-modal-info {
+    display: flex;
+    flex-direction: column;
+    padding-right: 0.5rem;
+}
+
+#cart-modal-box {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    border: 1px solid rgb(189, 189, 189);
+    border-radius: 8px;
+}
+
+#cart-modal-box > img {
+    border-radius: 8px;
+}
+
+#cart-modal-checkout {
+    border: none;
+    background-color: rgb(230, 0, 18);
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    height: 3rem;
+    border-radius: 8px;
+    margin-top: 1.5rem;
+}
+
+#continue-shopping {
+    border: 1px solid rgb(230, 0, 18);
+    background-color: white;
+    color: rgb(230, 0, 18);
+    font-size: 16px;
+    cursor: pointer;
+    height: 3rem;
+    border-radius: 8px;
+    margin-top: .7rem;
+}
+
+#cart-modal-item {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid rgb(189, 189, 189);
+}
+
+#modal-qty-price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#modal-qty-price > div {
+    font-size: 14px;
+    color: rgb(109, 109, 109);
 }
