--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -120,3 +120,23 @@
     padding: 1rem;
     cursor: pointer;
 }
+
+.disabled-button {
+    display: flex;
+    align-self: flex-end;
+    width: 7rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 11px;
+    height: 2rem;
+    padding: 0;
+    border: none;
+    border-radius: 80px;
+    background-color: rgb(175, 175, 175);
+    color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+    cursor: auto;
+}
+
+.login-err {
+    color: red;
+}
