--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -114,3 +114,24 @@
     cursor: pointer;
     margin-top: 2rem;
 }
+
+.disabled-signup {
+    display: flex;
+    align-self: center;
+    width: 7rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 11px;
+    height: 2rem;
+    padding: 0;
+    border: none;
+    border-radius: 80px;
+    margin-top: 2rem;
+    background-color: rgb(175, 175, 175);
+    color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+    cursor: auto;
+}
+
+.signup-err {
+    color: red;
+}
