--- a/react-app/src/components/StorePage/StorePage.css
+++ b/react-app/src/components/StorePage/StorePage.css
@@ -70,6 +70,8 @@
     color: white;
     font-size: 48px;
     margin: 1rem 0;
+    display: flex;
+    text-align: center;
 }
 
 #random-product {
@@ -113,4 +115,45 @@
 
 .category-button > img {
     width: 5rem
+}
+
+#all-products-wrap {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#all-products {
+    display: flex;
+    width: 100%;
+    max-width: 80rem;
+    flex-direction: column;
+    padding-top: 3rem;
+}
+
+
+#store-path {
+    display: flex;
+    gap: 0.5rem;
+    font-size: 14px;
+    align-items: center;
+}
+
+#store-path > i {
+    color: rgb(190, 190, 190);
+}
+
+.path-link {
+    color: rgb(97, 97, 97);
+    cursor: pointer;
+}
+
+#store-link {
+    color: black;
+}
+
+#products-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
