--- a/react-app/src/components/CartPage/CartPage.css
+++ b/react-app/src/components/CartPage/CartPage.css
@@ -9,7 +9,6 @@
     flex-direction: column;
     width: 100%;
     max-width: 72rem;
-    border: 1px solid black;
     margin-top: 2rem;
 
 }
@@ -37,7 +36,8 @@
 .cart-item-wrapper {
     display: flex;
     padding: 2rem 0rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(212, 212, 212);
+    justify-content: space-between;
 }
 
 .cart-item-img {
@@ -53,6 +53,7 @@
     max-width: 10rem;
     max-height: 5.6rem;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .space-between {
@@ -80,4 +81,122 @@
 
 .cart-link {
     color: black;
+}
+
+.cart-item-name {
+    display: flex;
+    margin-left: 1rem;
+    width: 18rem;
+}
+
+.cart-item-name > h4 {
+    margin: 0;
+    cursor: pointer;
+}
+
+.cart-item-price {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 5.6rem;
+    text-align: end;
+}
+
+.cart-item-price > button {
+    border: none;
+    background-color: white;
+    color: red;
+    font-weight: bold;
+    font-size: 15px;
+    border-bottom: 2px solid red;
+    padding: 0;
+}
+
+.cart-item-first-half {
+    display: flex;
+}
+.cart-item-second-half {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.cart-item-quantity {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.cart-item-quantity > p {
+    margin: 0;
+    font-size: 12px;
+    color: rgb(128, 128, 128);
+    margin-bottom: 5px;
+}
+
+.ct-quantity-box {
+    display: flex;
+    height: 3rem;
+    border: 1px solid rgb(209, 209, 209);
+    border-radius: 8px;
+    display: flex;
+    width: 9rem;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+}
+
+.ct-quantity-box > button {
+    border: none;
+    font-size: 15px;
+    width: 33%;
+    height: 100%;
+}
+
+.order-summary h3, h4 {
+    margin: 0;
+}
+
+.order-summary h3 {
+    padding-bottom: 0.8rem;
+}
+
+.bottom-border {
+    border-bottom: 2px solid rgb(219, 219, 219);
+    width: 100%;
+}
+
+.order-section {
+    padding: 0.5rem 0;
+}
+
+#checkout-button {
+    border: none;
+    background-color: rgb(230, 0, 18);
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    height: 3rem;
+    border-radius: 8px;
+    width: 100%;
+}
+
+#payment-methods {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#clear-cart-button {
+    align-self: flex-end;
+    margin-top: 2rem;
+    border: 1px solid rgb(230, 0, 18);
+    background-color: white;
+    color: rgb(230, 0, 18);
+    font-size: 15px;
+    cursor: pointer;
+    height: 2.5rem;
+    border-radius: 8px;
+    margin-top: .7rem;
+    width: 12rem;
 }
