--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -37,7 +37,7 @@
     font-size: 16px;
 }
 
-#footer-wrapper > div > i {
+#footer-wrapper > div > a > i {
     color: white;
     font-weight: normal;
     font-size: 35px;
