--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -61,6 +61,24 @@
                 white 0px 0px 10px;
 }
 
+#nav-bar-wrapper-clear .profile-button {
+  color: black;
+
+  text-shadow:  white 0px 0px 10px,
+                white 0px 0px 10px,
+                white 0px 0px 10px,
+                white 0px 0px 10px;
+}
+
+#nav-bar-wrapper-clear #cart-button > div {
+  color: black;
+
+  text-shadow:  white 0px 0px 10px,
+                white 0px 0px 10px,
+                white 0px 0px 10px,
+                white 0px 0px 10px
+}
+
 #nav-bar-top {
   display: flex;
   flex-direction: row;
@@ -244,4 +262,51 @@
   height: 3rem;
   border-radius: 8px;
   margin-top: .7rem;
+}
+#cart-button {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  cursor: pointer;
+}
+
+#cart-icon {
+  display: flex;
+  font-size: 18px;
+  height: 2rem;
+  width: 2rem;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+#cart-qty {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 10px;
+  color: white;
+  background-color: rgb(230, 0, 18);
+  min-width: 14px;
+  height: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  text-shadow: none;
+}
+
+.profile-button {
+  background: none;
+  display: flex;
+  align-items: center;
+  border: none;
+  gap: 0.3rem;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.profile-button > img {
+  width: 1.5rem;
+  border-radius: 100%;
 }
