--- a/react-app/src/components/ProductPage/ProductPage.css
+++ b/react-app/src/components/ProductPage/ProductPage.css
@@ -241,3 +241,20 @@
     width: 3rem;
     margin-top: 1.5rem;
 }
+
+.product-edit {
+    border: 1px solid rgb(230, 0, 18);
+    background-color: white;
+    color: rgb(230, 0, 18);
+    font-size: 15px;
+    cursor: pointer;
+    height: 3rem;
+    border-radius: 8px;
+    width: 100%;
+}
+
+.manage-buttons {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
