--- a/react-app/src/components/ProductPreview/ProductPreview.css
+++ b/react-app/src/components/ProductPreview/ProductPreview.css
@@ -10,6 +10,10 @@
     box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 16px 0px;
 }
 
+.product-preview-wrapper:hover {
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 16px 0px;
+}
+
 .product-preview-wrapper img {
     display: flex;
     width: 100%;
