--- a/react-app/src/components/ProductFormPage/ProductFormPage.css
+++ b/react-app/src/components/ProductFormPage/ProductFormPage.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(241, 241, 241);
-    height: 100vh;
+    background-color: rgb(223, 223, 223);
+    min-height: 100vh;
     padding-top: 1.5rem;
 }
 
@@ -41,7 +41,7 @@
     flex-direction: column;
     margin: .5rem;
     width: 35rem;
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(223, 223, 223);
     padding: 2rem 6rem 2rem 6rem;
 }
 
