--- a/react-app/src/components/ProductPage/ProductPage.css
+++ b/react-app/src/components/ProductPage/ProductPage.css
@@ -211,6 +211,15 @@
     font-size: 15px;
     width: 33%;
     height: 100%;
+    cursor: pointer;
+}
+
+.quantity-adjuster > button:disabled {
+    border: none;
+    font-size: 15px;
+    width: 33%;
+    height: 100%;
+    cursor: not-allowed;
 }
 
 .add-to-cart-button {
@@ -224,6 +233,7 @@
     justify-content: center;
     border-radius: 8px;
     border: none;
+    cursor: pointer;
 }
 
 .add-to-cart-button * {
