--- a/react-app/src/components/StorePage/StorePage.css
+++ b/react-app/src/components/StorePage/StorePage.css
@@ -188,7 +188,8 @@
     display: flex;
     align-items: center;
     margin: 0;
-    width: 20rem;
+    width: 22rem;
+    font-size: 16px;
 }
 
 #random-desc > button {
