--- a/react-app/src/components/ManageProductsPage/ManageProductsPage.css
+++ b/react-app/src/components/ManageProductsPage/ManageProductsPage.css
@@ -12,9 +12,14 @@
     padding-top: 3rem;
 }
 
-.current-products-list {
+.current-products-preview {
     display: flex;
     justify-content: center;
+    margin-left: 3rem;
+}
+
+.current-products-list {
+    display: flex;
     flex-wrap: wrap;
 }
 
@@ -25,7 +30,7 @@
     align-items: center;
     justify-content: center;
     align-self: center;
-    margin: 3rem;
+    margin: 7rem;
     background-color: #00FF00;
     font-size: 40px;
     border-radius: 100%;
@@ -36,4 +41,25 @@
 
 #new-product > i {
     color: white;
+}
+
+.your-path {
+    display: flex;
+    gap: 0.5rem;
+    font-size: 14px;
+    align-items: center;
+    flex-direction: row;
+}
+
+.your-path > i {
+    color: rgb(190, 190, 190);
+}
+
+.path-link {
+    color: rgb(97, 97, 97);
+    cursor: pointer;
+}
+
+.your-link {
+    color: black;
 }
