--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -196,6 +196,33 @@
 .user-info-links {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
+  border: solid 1px rgb(202, 202, 202);
+  border-radius: 8px;
+  background-color: white;
+}
+
+.user-info-links > button {
+  display: flex;
+  padding: 1rem;
+  padding-left: 1.5rem;
+  gap: 0.7rem;
+  font-size: 15px;
+  font-weight: bold;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.user-info-links > .bot-border {
+  border-bottom: 1px solid rgb(202, 202, 202);
+}
+
+
+
+.user-info-links i {
+  color: #e60012;
+  font-size: 18px;
 }
 
 #yes-user-box {
